スライドのコンテンツ差し替え

--- a/css/style.css
+++ b/css/style.css
@@ -135,32 +135,32 @@ header {
 	 padding: 0 80px 80px 80px;
  }
  .slide1 {
-	background-image: url(../image/AlamyRF_K705AT.jpg);
+	background-image: url(../image/virtual-wine-tastings-wineries.jpg);
 	background-size: cover;
  }
  
  .slide2 {
-	background-image: url(../image/shutterstockRF_1257564496.jpg);
+	background-image: url(../image/argyle-winery-oregon.jpg);
 	background-size: cover;
  }
  
  .slide3 {
-	background-image: url(../image/BTmarie-antoinette39s-personal-maison-versailles-france-07201410-060225.jpg);
+	background-image: url(../image/IMG_20180726_161512.jpg);
 	background-size: cover;
  }
 
  .slide4 {
-	background-image: url(../image/EmiratesCOVID-19testing.jpg);
+	background-image: url(../image/EX20-interactive.jpg);
 	background-size: cover;
  }
  
  .slide5 {
-	background-image: url(../image/EmiratespassengerstestforCOVID-19.jpg);
+	background-image: url(../image/EX20-OutofSightOutofMind_UnderwaterEarth.jpg);
 	background-size: cover;
  }
  
  .slide6 {
-	background-image: url(../image/EmiratesCOVID-19testinginDubai.jpg);
+	background-image: url(../image/EX20-FILM-PublicTrust3.png);
 	background-size: cover;
  }
 h2 {
